--- a/src/cssFiles/WeatherDisplay.css
+++ b/src/cssFiles/WeatherDisplay.css
@@ -62,9 +62,10 @@
 
 
 body {
-  background-color: rgb(86, 144, 163);
-  color: rgb(242, 242, 242);
-  text-shadow: black 2px 2px 6px;  
+  background-color: rgb(162, 163, 86);
+  color: rgb(5, 0, 0);
+  text-shadow: rgb(252, 250, 250) 2px 2px 6px;  
+  font-family: "Lucida Console", "Courier New", monospace;
   padding: 20px;
   display: flex;
   flex-direction: column;
